scripts/hermes_fuzz_executed/fuzz_32_execution
'use strict';
let obj = {a: 4, b: 'world'};
let f = function (a, b) {
  this.valueOf = null;
}.bind(obj);
f.valueOf = null;
let obj = {a: 4, b: 'world'};
let f = eval("('"+'a';
f;
```

Execution Output ------------------:
test.js:8:22: error: ')' expected at end of function call
let f = eval("('"+'a';
            ~~~~~~~~~^
